--- a/luv.html
+++ b/luv.html
@@ -19,10 +19,10 @@
             <input id="messageState" type="checkbox" style="display:none"/>
             </label>
             <div class="message">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">С днем рождения любимая </h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">С днем рождения, любимая </h1>
                 <p> 
                     <span>
-                        &emsp; Поздравляю с днем рождения котенок. желаю тебе всего чего ты захочешь. Я надеюсь что свой день ты проведешь в теплоте и радости. Не забывай, что я люблю тебя, ну а еще я люблю :
+                        &emsp; Поздравляю с днем рождения котенок!!! желаю тебе всего, чего ты захочешь. Я надеюсь, что свой день ты проведешь в теплоте и радости. Не забывай, что я люблю тебя, ну,  а еще я люблю :
                     </span>
                     <br> <br>
                     <span>
@@ -37,8 +37,8 @@
                 </p>
                 <br>
                 <div class="sincere">
-                    <p style="font-weight"> С днем рождения солнце</p>
-                    <p>C любовью, твой мальчик </p>
+                    <p style="font-weight"> С днем рождения, солнце</p>
+                    <p>C любовью, твой мальчик 💘 </p>
                     
                  </div>
             </div>
