--- a/luv.html
+++ b/luv.html
@@ -27,7 +27,7 @@
                     <br> <br>
                     <span>
                         &emsp;  твои зеленые глазки, твои нежные руки, твои мягкие волосы, твои нежные губы, твое милое красивое личико, тебя всю.</span> 
-                        <br> &emsp; Я искренне рад что ты появилась в моей жизни, и когда мы рядом, заставляешь мое сердце биться быстрее.
+                        <br> &emsp; Я искренне рад что ты появилась в моей жизни, и когда мы рядом друг с другом, заставляешь мое сердце биться быстрее.
                     <span>
                         <br>
                        <br> &emsp;  101 роза для тебя <br>
