--- a/luv.html
+++ b/luv.html
@@ -22,12 +22,12 @@
                 <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">С днем рождения, любимая </h1>
                 <p> 
                     <span>
-                        &emsp; Поздравляю с днем рождения котенок!!! желаю тебе всего, чего ты захочешь. Я надеюсь, что свой день ты проведешь в теплоте и радости. Не забывай, что я люблю тебя, ну,  а еще я люблю :
+                        &emsp; Поздравляю с днем рождения котенок!!! Желаю тебе всего, чего ты захочешь. Я надеюсь, что свой день ты проведешь в теплоте и радости. Не забывай, что я люблю тебя, ну,  а еще я люблю :
                     </span>
                     <br> <br>
                     <span>
                         &emsp;  твои зеленые глазки, твои нежные руки, твои мягкие волосы, твои нежные губы, твое милое красивое личико, тебя всю.</span> 
-                        <br> &emsp; Я искренне рад что ты появилась в моей жизни, и когда мы рядом друг с другом, заставляешь мое сердце биться быстрее.
+                        <br> &emsp; Я искренне рад, что ты появилась в моей жизни, и когда мы рядом друг с другом, заставляешь мое сердце биться быстрее.
                     <span>
                         <br>
                        <br> &emsp;  101 роза для тебя <br>
